--- a/app/src/main/res/layout/activity_dispaly.xml
+++ b/app/src/main/res/layout/activity_dispaly.xml
@@ -6,10 +6,18 @@
 
     <TextView
         android:id="@+id/main_title"
+        android:background="@android:color/darker_gray"
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/sub_title"
+        android:paddingLeft="10dp"
+        android:background="@android:color/darker_gray"
+        android:textColor="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
