--- a/app/src/main/res/layout/region_row.xml
+++ b/app/src/main/res/layout/region_row.xml
@@ -4,6 +4,10 @@
               android:layout_height="match_parent">
 
     <TextView
+        android:textColor="@android:color/black"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
