--- a/app/src/main/res/layout/region_row.xml
+++ b/app/src/main/res/layout/region_row.xml
@@ -6,8 +6,9 @@
     <TextView
         android:textColor="@android:color/black"
         android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingRight="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
